src/main/css/app.scss
html,
body {
  background-color: $base-background-color;
  font-size: $base-font-size;
  font-weight: $base-font-weight;
}
h1 {
  border-bottom: 1px solid $border-color;
  font-size: 1.6rem;
  font-weight: 500;
  margin-bottom: 17px;
  margin-top: 2px;
  padding-bottom: 17px;
}
h2 {
  font-size: 1.4rem;
  font-weight: 500;
  margin: 20px 0 4px;
}
form.form-horizontal {
  padding: 0 20px;
}
button {
  border-radius: $border-radius;
}
button + button {
  margin-left: 5px;
}
.accumulator-countdown .btn {
  margin-left: 20px;
}
.refreshCheckbox {
  font-size: 0.9rem;
  font-weight: $base-font-weight;
  margin-top: 3px;
}
.navigation {
  position: fixed;
  left: 0;
  top: 0;
  bottom: 0;
  width: 250px;
  background-color: $navigation-background-color;
  color: white;
  border: 0;
  box-shadow: 1px 1px 10px #666;
  padding: 0 20px;
  z-index: 100;

  > .navigationLogo {
    padding: 16px 0px;
    border-bottom: $navigation-border;
    width: 100%;
    display: inline-flex;
  }

  > ul {
    margin: 0;
    padding: 0;
    list-style: none;

    > li {
      padding: 0;

      a {
        color: white;
        text-decoration: none;
        border-left: 4px solid transparent;
        font-weight: 300;
        letter-spacing: 0.07rem;
        display: block;
        padding: 8px 10px;

        &.activeNav {
          border-left: 4px solid white;
          background-color: #3d444e;
        }

        &:hover {
          background-color: #4d545e;
          cursor: pointer;
        }
      }

      &.divider {
        margin: 15px 0;
        border-bottom: $navigation-border;
      }

      &.navHeader {
        text-transform: uppercase;
        font-size: 0.8em;
        opacity: 0.6;
        margin: 15px 0 5px;
      }
    }
  }
}
.contentArea {
  background-color: white;
  position: fixed;
  overflow: auto;
  top: 0;
  right: 0;
  bottom: 0;
  left: 250px;
  z-index: 99;
  padding: 15px;
}

.btn {
  border-radius: $border-radius;
}
.hidden {
  display: none;
}

.wrapper {
  padding: 0px;
  font-size: $base-font-size;
  height: 800px;
  width: 100%;
  font-family: 'Open Sans', sans-serif;
  display: inline-block;
  position: absolute;
}

.advancedWrapper {
  text-align: right;
  padding-right: 10px;
}

.advanced {
  cursor: pointer;
  color: #285f8f;
  text-align: right;
}

.alignCenter {
  text-align: center;
  margin-top: 0px;
  margin-bottom: 0px;
}

.submitButtons {
  margin-right: 10px;
  color: #fff;
  background: #285f8f;
  text-align: center;
  vertical-align: middle;
  padding: 5px 10px 5px 10px;
  font-size: 1em;
  display: inline-block;
}

.submitContainers {
  display: inline-block;
  padding: 5px;
  text-align: right;
  padding-right: 20px;
  width: 100%;
}

.submitButtonsFixed {
  margin-right: 10px;
  color: #fff;
  background: #285f8f;
  text-align: center;
  vertical-align: middle;
  padding: 5px 10px 5px 10px;
  font-size: 1em;
  display: inline-block;
  margin: 10px;
}

.submitContainersFixed {
  display: inline-block;
  padding: 5px;
  text-align: right;
  padding-right: 20px;
  width: 100%;
}

.configurationError {
  color: red;
  text-align: center;
}
form.form-horizontal.loginForm {
  padding: 15px;
}
.loginContainer {
  width: 100vw;
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
}

.loginBox {
  background-color: #fff;
  border: 0;
  border-radius: $border-radius;
  box-shadow: 1px 1px 10px #999;
  margin-bottom: 20px;
  max-width: 500px;
  min-height: 175px;
  min-width: 300px;
  overflow: hidden;
  position: fixed;
  width: 100%;
}
.modal-content {
  border-radius: $border-radius;
}
.border {
  border: 1px solid $border-color;
}

.alertHeader {
  height: 100px;
  line-height: 100px;
  text-align: center;
  font-size: 2.5em;
  padding-top: 50px;
}

.alertHeaderTag {
  margin: 0 auto;
  padding-top: 10px;
}

.table {
  display: table;
  margin: 0 auto;
}

.tableBorder {
  border: 1px solid $border-color;
  margin: 0 auto;
  margin-top: 10px;
  width: 75%;
  height: 100%;
  padding: 10px;
  background-color: white;
  position: relative;
  overflow: hidden;
}

.modalContainer {
  padding: 15px;
  margin-top: 65px;
}

.progressIcon {
  display: inline;
  margin: 0 10px;
}

.missingHubData {
  color: #d80015;
  font-style: italic;
  font-weight: bold;
}

.fontAwesomeLabel {
  padding-right: 5px;
}

.blackduckLogo {
  margin-top: 4px;
}

